--- a/style.css
+++ b/style.css
@@ -117,8 +117,18 @@ label {
   font-size: 0.8rem;
 }
 
-input {
+.form-section {
   width: 45%;
+  display: flex;
+  flex-direction: column;
+}
+
+.hidden {
+  display: none;
+}
+
+input {
+  width: 100%;
   height: 30px;
   border: 0.5px solid rgb(200, 200, 200);
   border-radius: 5px;
@@ -132,6 +142,18 @@ input {
 input:focus {
   border: 1.5px solid #7fdb34;
   box-shadow: 0 0 4px #7fdb34;
+}
+
+.error {
+  border: 1.5px solid red;
+}
+
+fieldset .errmsg {
+  font-size: 12px;
+  color: rgb(241, 53, 53);
+  position: relative;
+  top: -12px;
+  margin-left: 10px;
 }
 
 form button {
